# picow-race-timer

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  globals.c  globals.h  inputs.c  lwipopts.h  main.c  mbedtls_config.h  picow-race-timer.h  tcp-test-server.py  tcp.c  tls.c  tracklist.c
txt/: msc_disk.c  wifi_setting.c  wifi_setting.h
